--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="Ajustes"
+        android:contentDescription="@string/ajustes"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,9 +31,9 @@
         android:layout_height="100dp"
         android:background="@android:color/transparent"
         android:backgroundTint="@android:color/transparent"
-        android:contentDescription="Icono app"
+        android:contentDescription="@string/icono_app"
         android:scaleType="centerInside"
-        android:src="@drawable/MYC_icono"
+        android:src="@drawable/myc_icono_pp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
@@ -47,7 +47,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:contentDescription="Salir"
+        android:contentDescription="@string/salir"
         android:src="@drawable/botonsalir"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +73,7 @@
         android:id="@+id/ajustesFondo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="Fondo ajustes"
+        android:contentDescription="@string/fondo_ajustes"
         android:visibility="invisible"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +86,7 @@
         android:id="@+id/fondoInfo"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="Fondo info"
+        android:contentDescription="@string/fondo_info"
         android:visibility="invisible"
         android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,13 +101,14 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#000000"
         android:clickable="true"
-        android:text="JUGAR"
+        android:text="@string/jugar"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nombreApp" />
+        app:layout_constraintTop_toBottomOf="@id/nombreApp"
+        android:focusable="true" />
 
     <ImageButton
         android:id="@+id/botonInfo"
@@ -116,7 +117,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="@color/black"
-        android:contentDescription="Info"
+        android:contentDescription="@string/info"
         android:scaleType="centerCrop"
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
@@ -134,6 +135,7 @@
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/botonInfo"
-        app:srcCompat="@drawable/botonhelp" />
+        app:srcCompat="@drawable/botonhelp"
+        android:contentDescription="@string/bot_n_de_ayuda" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
