--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -92,11 +93,8 @@
         android:layout_height="110dp"
         android:text="Button"
         android:visibility="invisible"
-        tools:layout_editor_absoluteX="426dp"
-        tools:layout_editor_absoluteY="43dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/sanos"
@@ -178,5 +176,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imagenInfectados"
         app:layout_constraintVertical_bias="0.041"
         app:srcCompat="@drawable/muertos" />
+
+    <Button
+        android:id="@+id/infectar"
+        android:layout_width="91dp"
+        android:layout_height="103dp"
+        android:layout_marginStart="624dp"
+        android:layout_marginTop="267dp"
+        android:layout_marginEnd="16dp"
+        android:text="Infectar ciudad"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
